[amazonechocontrol] fix NPE
It was recently discovered that a valid, empty input JSON also makes Gson.fromJSON return null, while it was assumed to only return null when the input is null.

Signed-off-by: Jan N. Klug <github@klug.nrw>